possible fix for side scrolling on mobile

--- a/index.css
+++ b/index.css
@@ -4,6 +4,11 @@ body{
   background-color: #4095ff;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .sample{
   background-image:  linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.25)), url("./images/seattle.jpg");
   background-color: #009bd6;
